# navier-cylinder

./: .gitignore  CLAUDE.md  COMPLETE_SESSION_CONTEXT.md  CONTEXT_FOR_NEXT_SESSION.md  CONTEXT_FOR_NEXT_SESSION.txt  FILE_MANIFEST.txt  FINAL_STATUS.md  MPI_BUILD_STATUS.md  PROJECT_COMPLETION_REPORT.md  PROJECT_SETUP_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  README_START_HERE.md  SESSION_COMPLETION_SUMMARY.md  SESSION_SUMMARY.md
2D-cylinder/: .gitignore  BUILD_AND_RUN_GUIDE.md  CMakeLists.txt  LICENSE  PROJECT_SUMMARY.md  QUICK_COMMANDS.md  QUICK_START.md  README.md  README_SETUP.md  START_HERE.md  VISUALIZATION_GUIDE.md  WORKFLOW.md  analyze_results.py  create_simple_mesh.py  cylinder.mesh  cylinder_test.mesh  generate_cylinder_mesh.py  generate_mesh.py  navier_simple.cpp  navier_solver.cpp  plot_forces.py  quick_test.sh  setup_environment.sh  test_mesh_parser.cpp
